--- a/client/src/components/ProductList/ProductList.css
+++ b/client/src/components/ProductList/ProductList.css
@@ -40,6 +40,7 @@
 @media only screen and (max-width: 480px) {
   .plistright {
     flex-direction: column;
+    font-size: 13px;
   }
   .plistwrapper {
     display: flex;
