--- a/client/src/pages/AddProduct/AddProduct.css
+++ b/client/src/pages/AddProduct/AddProduct.css
@@ -8,6 +8,18 @@
 .productswrapper {
   padding: 40px;
 }
+.logOut {
+  border: 2px solid brown;
+  width: 80px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  background-color: rgb(3, 133, 90);
+  color: white;
+  cursor: pointer;
+}
 @media only screen and (max-width: 480px) {
   .productswrapper {
     padding: 5px;
